logs/randommac.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/randommac'...
Compiling './lib/python3.5/site-packages/randommac/execute_bash_command.py'...
***   File "./lib/python3.5/site-packages/randommac/execute_bash_command.py", line 6
    print "command: " + command
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/randommac/extract_information_from_nmcli.py'...
***   File "./lib/python3.5/site-packages/randommac/extract_information_from_nmcli.py", line 33
    print "Into parser: "
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/randommac/generate_random_MAC.py'...
***   File "./lib/python3.5/site-packages/randommac/generate_random_MAC.py", line 27
    print file_valid_MAC
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/randommac/randommac_commandline.py'...
***   File "./lib/python3.5/site-packages/randommac/randommac_commandline.py", line 41
    print "Launch interactive interface"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/randommac/randommac_interface.py'...
***   File "./lib/python3.5/site-packages/randommac/randommac_interface.py", line 22
    print random_MAC
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/randommac/spoof_MAC_address.py'...
***   File "./lib/python3.5/site-packages/randommac/spoof_MAC_address.py", line 20
    print "*********************************************************************"
                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/randommac-0.1.16a1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
